k8s/agentgateway/auth0-jwks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth0-jwks
  namespace: agentgateway-system
spec:
  type: ExternalName
  externalName: dev-88zsceyr.us.auth0.com
  ports:
  - port: 443
    targetPort: 443
